--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This is mern stack chat application",
   "main": "index.js",
   "scripts": {
+    "build": "cd backend && npm install --force  && cd ../frontend && npm install --force && npm run build",
+    "start": "node backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
